--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 JBoss CapeDwarf Blue is JBoss' attempt to implement GoogleAppEngine API on top of JBoss' technology / frameworks / libraries.
 This way making the GAE to JBossAS switch seamless.
+
+to build you first need maven transformer plugin https://github.com/alesj/maven-transformer-plugin installed in your maven repo
